--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+/zhoupeng_016034910052_project3/code/toolbox_signal/
+/zhoupeng_016034910052_project3/code/toolbox_general/
+/zhoupeng_016034910052_project3/code/images/
+/zhoupeng_016034910052_project3/code/results/
+/zhoupeng_016034910052_project3/zhoupeng_016034910052_proj3.aux
+/zhoupeng_016034910052_project3/zhoupeng_016034910052_proj3.log
+
+
 zhoupeng_016034910052_project2/*
 !/zhoupeng_016034910052_project2/IEEEtran.cls
 !/zhoupeng_016034910052_project2/zhoupeng_016034910052_proj2.tex
