--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 /zhoupeng_016034910052_project3/code/toolbox_signal/
 /zhoupeng_016034910052_project3/code/toolbox_general/
+/zhoupeng_016034910052_project3/code/test.m
 /zhoupeng_016034910052_project3/code/images/
 /zhoupeng_016034910052_project3/code/results/
 /zhoupeng_016034910052_project3/zhoupeng_016034910052_proj3.aux
 /zhoupeng_016034910052_project3/zhoupeng_016034910052_proj3.log
+/zhoupeng_016034910052_project3/code/Wavelet-denoising/
 
 
 zhoupeng_016034910052_project2/*
