--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /zhoupeng_016034910052_project4/code/images/
-
+/zhoupeng_016034910052_project4/code/results/
 
 
 /zhoupeng_016034910052_project3/code/toolbox_signal/
